# dx12-scratch-old

./: .gitignore  CMakeLists.txt  cppcheck_report.txt
.github/workflows/: static-analysis.yml  utests.yml
examples/: CMakeLists.txt  clear.cpp  playground.cpp
kuro/: CMakeLists.txt  kuro_gfx.cpp  kuro_gfx.h  kuro_math.h
kuro/include/: kuro_gfx.h
kuro/include/kuro/: gfx.h  kuro_os.h  window.h
kuro/src/kuro/linux/: kuro_os.cpp
kuro/src/kuro/winos/: gfx.cpp  kuro_gfx.cpp  kuro_os.cpp  window.c
kuro/src/winos/: kuro_gfx.cpp  kuro_os.cpp
utests/: CMakeLists.txt  utests_math.cpp
